--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,19 +1,91 @@
+name: vscpd
+version: 14.0.0
+summary: VSCP daemon
+description: This is a VSCP daemon/sever that among other things act as a hub
+    for VSCP events from/to different sources.
+    The VSCP protocol/framework is one of the first IoT/m2m protocols/frameworks
+    that has been developed. It was available already in 2000. VSCP defines a
+    set of events that make it possible for system with different properties to 
+    talk to each other. VSCP & Friends is software and tools that can be used
+    with VSCP based systems.
+confinement: strict
+grade: stable
 
-  # After registering a name on build.snapcraft.io, commit an uncommented line:
-  # name: your-registered-name
-  version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-  summary: Single-line elevator pitch for your amazing snap # 79 char long summary
-  description: |
-    This is my-snap's description. You have a paragraph or two to tell the
-    most important story about your snap. Keep it under 100 words though,
-    we live in tweetspace and your description wants to look good in the snap
-    store.
+apps:
+  vscpd:
+    command: launcher.sh
+    daemon: simple
+    restart-condition: always
+    plugs: [home, network, network-bind]
 
-  grade: devel # must be 'stable' to release into candidate/stable channels
-  confinement: devmode # use 'strict' once you have the right plugs and slots
+  pub:
+    command: usr/bin/vscpd_pub
+    plugs: [home, network]
 
-  parts:
-    my-part:
-      # See 'snapcraft plugins'
-      plugin: nil
-  
+  rr:
+    command: usr/bin/vscpd_rr
+    plugs: [home, network]
+
+  sub:
+    command: usr/bin/vscpd_sub
+    plugs: [home, network]
+
+  passwd:
+    command: usr/bin/vscpd_passwd
+    plugs: [home]
+
+
+parts:
+  script:
+    plugin: dump
+    source: snap/local/
+    prime:
+      - default_config.conf
+      - launcher.sh
+  config:
+    plugin: dump
+    source: .
+    prime:
+      - vscpd.xml
+
+
+  vscpd:
+    after:
+      - lws
+    plugin: make
+    make-parameters: ["prefix=/usr", "WITH_WEBSOCKETS=yes", "WITH_ADNS=yes", "CFLAGS=-Wall -ggdb -O2 -I$SNAPCRAFT_STAGE -D_GNU_SOURCE"]
+    source: https://github.com/eclipse/vscpd
+    source-type: git
+
+    build-packages:
+      - libssl-dev
+      - xsltproc
+      - docbook-xsl
+      - gcc
+      - g++
+    stage-packages:
+      - libssl1.0.0
+      - ca-certificates
+    prime:
+      - usr/sbin/vscpd
+      - usr/bin/vscpd_pub
+      - usr/bin/vscpd_rr
+      - usr/bin/vscpd_sub
+      - usr/bin/vscpd_passwd
+      - usr/lib/libvscpd.so*
+      - lib/*-linux-gnu/libcrypto.so*
+      - lib/*-linux-gnu/libssl.so*
+      - usr/include/vscpd.h
+      - usr/include/vscpd_broker.h
+      - usr/include/vscpd_plugin.h
+
+  lws:
+    plugin: cmake
+    configflags: ["-DLWS_IPV6=ON", "-DLWS_WITHOUT_CLIENT=ON", "-DLWS_WITHOUT_EXTENSIONS=ON", "-DLWS_WITH_ZIP_FOPS=OFF", "-DLWS_WITH_ZLIB=OFF", "-DLWS_WITH_SHARED=OFF"]
+    source: https://github.com/warmcat/libwebsockets/archive/v2.4.2.tar.gz
+    source-type: tar
+    stage:
+      - include/libwebsockets.h
+      - include/lws_config.h
+      - lib/libwebsockets.a
+    prime: [-*]
