--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,3 +1,3 @@
 This is VSCP, the Very Simple Control Protocol & friends.
 Copyright (C) 2000-2019 Ake Hedman, Grodans Paradis AB
-<akhe@grodansparadis.com>
+<akhe@vscp.org>
