--- a/debian_orig/control
+++ b/debian_orig/control
@@ -1,18 +1,31 @@
-Source: vscpl2drv-automation%MAJOR-VERSION
-Section: utils
+Source: vscpd
+Section: net
 Priority: optional
-Maintainer: Ake Hedman <akhe@grodansparadis.com>
-Build-Depends: debhelper (>= %COMPAT), libssl-dev (>=1.0), libexpat1-dev (>=2.0)
-Standards-Version: 4.1.3
+Maintainer: Ake Hedman <akhe@vscp.org>
+Build-Depends: debhelper (>= %COMPAT), 
+               libssl-dev (>=1.0.0),
+               libsystemd-dev, 
+               libexpat1-dev (>=2.0),
+               uuid-dev
+Standards-Version: 4.3.0
 Homepage: https://www.vscp.org
-Vcs-Browser: https://github.com/grodansparadis/vscpl2drv-automation
-Vcs-Git: https://github.com/grodansparadis/vscpl2drv-automation.git
+Vcs-Browser: https://github.com/grodansparadis/vscp
+Vcs-Git: https://github.com/grodansparadis/vscp.git
 
-Package: vscpl2drv-automation%MAJOR-VERSION
+Package: vscpd
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libc6-dev (>= 2.14),
- libstdc++6 (>= 5.2), libgcc1 (>= 1:3.0), libssl-dev (>=1.0), libexpat1-dev (>=2.0)
-Description: Level II automation driver for the VSCP daemon
- A driver that can be added to the VSCP server to get sunrise/sunset etc 
- events Section when they happens calclulated from a position defined by a 
- longitude and a latitude.
+Multi-Arch: foreign
+Depends: adduser (>= 3.10),
+         ${shlibs:Depends},
+         libuuid1,
+         lsb-base (>=4.1+Debian3), 
+         ${misc:Depends}, 
+         libc6-dev (>= 2.14),
+         libstdc++6 (>= 5.2), 
+         libgcc1 (>= 1:3.0), 
+         libssl-dev (>=1.0.0), 
+         libexpat1-dev (>=2.0)
+Description: The VSCP daemon
+ A daemon that act as a hub and logic controller for a VSCP based system. It is
+ possible to add drivers to physical devices, interface external nodes over
+ tcp/ip, websockets and to perform other higher end functionality.
