--- a/Makefile.in
+++ b/Makefile.in
@@ -103,11 +103,10 @@ install-config:
 	@echo "- Installing main configuration file."
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/
 	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/vscp
-#	$(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.xml $(DESTDIR)/etc/vscp/vscpd.xml
-	@if [ ! -e $(DESTDIR)/etc/vscp/vscpd.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.xml $(DESTDIR)/etc/vscp/vscpd.xml;\
+	@if [ ! -e $(DESTDIR)/etc/vscp/vscpd.conf ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.xml $(DESTDIR)/etc/vscp/vscpd.xml.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
 	fi
 
 install-sample-data:
