--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -56,7 +56,7 @@ INSTALL_DIR = /usr/bin/install -c -d
 srcdir = .<
 top_srcdir = .
 top_builddir =
-bindir = ${exec_prefix}/bin
+bindir = ${exec_prefix}/sbin
 libdir = ${exec_prefix}/lib
 datadir = ${prefix}/share
 includedir = ${prefix}/include
@@ -237,13 +237,12 @@ vscpd: $(VSCPD_OBJECTS)
 # Used by checkinstall
 debinst: all
 	$(STRIP) vscpd
-	$(INSTALL_PROGRAM) vscpd /usr/bin
+	$(INSTALL_PROGRAM) vscpd /usr/$(bindir)
 	@mkdir -p @VSCPDIR@
 	@mkdir -p @VSCPDIR@/tmp
 	@$(INSTALL_PROGRAM) -b ../../../../install_files/unix/vscpd.startup_script_debian_debinst @VSCPDIR@/tmp/vscpd.startup_script_debian_debinst
 	@$(INSTALL_PROGRAM) -b ../../../../install_files/unix/vscpd.conf @VSCPDIR@/tmp/vscpd.conf_unix_distro
 	@$(INSTALL_PROGRAM) -b ../../../../install_files/variables/variables.xml @VSCPDIR@/tmp/variables.xml_distro
-	@$(INSTALL_PROGRAM) -b ../../../../install_files/DM/dm.xml @VSCPDIR@/tmp/dm.xml_distro
 	@$(INSTALL_PROGRAM) -b ../../../../install_files/simulation/simtempdata.txt @VSCPDIR@/tmp/simtempdata.txt
 	@$(INSTALL_PROGRAM) -b ../../../../install_files/certs/server.pem @VSCPDIR@/tmp/server.pem
 	@$(INSTALL_PROGRAM) -b ../../../../install_files/certs/client.pem @VSCPDIR@/tmp/client.pem
