Fixed install script error

--- a/Makefile.in
+++ b/Makefile.in
@@ -91,7 +91,7 @@ install-startup-script:
 	@echo "- Installing startup script."
 	@if [ ! -e $(DESTDIR)/etc/init.d/vscpd ]; then\
  	    echo "- Copying startup script";\
-	    $(INSTALL_PROGRAM) -b -m755 debian_orig/unix/vscpd.init $(DESTDIR)/etc/init.d/vscpd;\
+	    $(INSTALL_PROGRAM) -b -m755 debian_orig/vscpd.init $(DESTDIR)/etc/init.d/vscpd;\
 	    echo "- Installing startup script";\
 	    update-rc.d vscpd defaults;\
 	fi
