--- a/Makefile.in
+++ b/Makefile.in
@@ -109,10 +109,10 @@ install-config:
 install-sample-data:
 
 install-sample-certs:
-	$(INSTALL_PROGRAM) -d $(DESTDIR)@VSCPDIR@/certs
+	$(INSTALL_PROGRAM) -d $(DESTDIR)/etc/vscp/certs
 	@echo "- Installing web server sample certificate."
-	@if [ ! -e $(DESTDIR)@VSCPDIR@/certs/server.pem ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/server.pem /etc/certs/;\
+	@if [ ! -e $(DESTDIR)/etc/vscp/certs/server.pem ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/server.pem /etc/vscp/certs/;\
 	fi
 
 	@echo "- Installing web client sample certificate."
