--- a/debian_orig/vscpd.conf
+++ b/debian_orig/vscpd.conf
@@ -8,6 +8,6 @@ pid_file /var/run/vscpd.pid
 persistence true
 persistence_location /var/lib/vscp/vscpd/
 
-log_dest file /var/log/vscpd/vscpd.log
+log_dest file /var/log/vscp/vscpd.log
 
-include_dir /etc/vscpd/conf.d
+include_dir /etc/vscp/conf.d
